@@ -1,8 +1,10 @@
 glibc (2.5-7) unstable; urgency=low
 
   * debian/sysdeps/i386.mk: switch from --includir= to amd64_includedir.
+  * debian/local/etc_init.d/glibc.sh: fix the broken comment.  Closes: 
+    #422587.
 
- -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 May 2007 11:20:52 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 May 2007 11:45:41 +0200
 
 glibc (2.5-6) unstable; urgency=low
 
